syntax = "proto3";
package product;


service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (Product);
    rpc GetProduct (GetProductRequest) returns (Product);
    rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse);
}


message CreateProductRequest { string name = 1; double price = 2; int32 stock = 3; }
message GetProductRequest { string id = 1; }
message ReserveStockRequest { string productId = 1; int32 qty = 2; }
message ReserveStockResponse { bool ok = 1; }


message Product { string id = 1; string name = 2; double price = 3; int32 stock = 4; }